2017.08.08

if(interactive()) to avoid slow CRAN check on
example(PeakSegJointHeuristic)

2017.06.20

Import penaltyLearning, remove interval regression code.

2017.05.05

Suggest penaltyLearning, used in pipeline.R with colSums features.

Use geom_rect rather than geom_step in problem.joint.plot, to avoid an
error when the data set has only 1 row.

2017.04.20

better caching: readCoverage etc.

problem.joint.predict.job with list column.

2017.02.27

multiClusterPeaks is a new R/C function that clusters peaks into
overlapping groups, with at most 1 peak per sample (in contrast,
clusterPeaks allows more than one per per sample).

problem.joint.predict.many now prints progress 1 / N joint prediction
problems, and skips a joint prediction problem if its peaks.bed file
already exists (allows restarting).

problem.joint.targets.train now prints progress 1 / N labeled joint
problems.

problem.joint now sets first and last chromStart to corresponding
problem start/end, before giving the data to ProfileList and
PeakSegJoint. This ensures that the peak start/end are never outside
of the problem start/end.

2016.11.01

New functions problem.joint.predict.many, problem.joint.targets.train,
problem.joint.train, problem.joint.plot, problem.joint.target,
problem.joint.predict

2016.10.16

Depend ggplot2 >= 2.0

New problem.joint function in pipeline.R which is used in
https://github.com/tdhock/PeakSegFPOP 

2016.01.22

Docs for PeakSegJointError.

2015.11.03

Step6 outputs PeakSegJoint-predictions-viz/index.html which shows peak
predictions with links to the UCSC genome browser. If an Input sample
group is present, then we make a facetted scatterplot of Input versus
other groups. If no Input sample group is present then we make a bar
plot which shows only the other groups. If there are labels for Input
samples, then we only report "specific" peaks in the output bed
files. Specific peaks are defined as being present in not too many